fix arrow link issue on smaller screens

--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -54,7 +54,7 @@ p,
 
     &::after {
       content: '↗';
-      font-size: 1rem;
+      font-size: 0.875rem;
       @apply ml-[5px];
       vertical-align: super;
     }
